--- a/web-raspi-config.html
+++ b/web-raspi-config.html
@@ -11,6 +11,14 @@
 <body>
 <center>Basic Raspberry Pi Configuration</center>
 
+
+<div style="position: relative;">
+ <canvas id="layer1" width="100" height="100" 
+   style="position: absolute; left: 0; top: 0; z-index: 0;"></canvas>
+ <canvas id="layer2" width="100" height="100" 
+   style="position: absolute; left: 100; top: 100; z-index: 1;"></canvas>
+</div>
+
 <form enctype="multipart/form-data" action="./cgi-bin/web-raspi-config.py" method="post" onsubmit="return Validate(this);">
 
 
