--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ function fdprint(){
         <div>
          <table align="center">
 		 <tr>
-         <td align="center"><h3>Upgrate</h3>              <img src="./img/down.png" /></td>
+         <td align="center"><h3>Upgrade</h3>              <img src="./img/down.png" /></td>
 		 <td align="center"><h3>Configuration</h3>		  <img src="./img/conf.png"/></td>
          </tr>
 		 </table>
