link for web app

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@ function fdprint(){
         <div>
          <table align="center">
 		 <tr>
-         <td align="center"><h3>Netfabb Cloud</h3>          <img src="./img/netfabb.png"></td>
-         <td align="center"><h3>Coffeescad</h3>          <img src="./img/coffescad.png"/></td>
-         <td align="center"><h3>Shapesmith</h3>          <img src="./img/smith.png"/></td>
-         <td align="center"><h3>Tin3d</h3>          <img src="./img/3dtin.png"></td>
+         <td align="center"><h3>Netfabb Cloud</h3>     <a href="http://cloud.netfabb.com/" target="_blank"><img src="./img/netfabb.png"></a></td>
+         <td align="center"><h3>Coffeescad</h3>        <a href="http://coffeescad.net/online/" target="_blank"><img src="./img/coffescad.png"/></a></td>
+         <td align="center"><h3>Shapesmith</h3>        <a href="https://cloud.shapesmith.net/signin" target="_blank"><img src="./img/smith.png"/></a></td>
+         <td align="center"><h3>Tin3d</h3>             <a href="http://www.3dtin.com/#" target="_blank"><img src="./img/3dtin.png"></a></td>
          </tr>
 		 <tr>
-         <td align="center"><h3>Leopoly</h3> <img src="./img/leopoly.png"></td>
-         <td align="center"><h3>Cookiecaster</h3>          <img src="./img/Cookiecaster.jpg"></td>
-		 <td align="center"><h3>Tinkercad</h3>          <img src="./img/tinkercad.png"></td>
+         <td align="center"><h3>Leopoly</h3>           <a href="http://leopoly.com/" target="_blank"><img src="./img/leopoly.png"></a></td>
+         <td align="center"><h3>Cookiecaster</h3>      <a href="http://cookiecaster.com/#editor" target="_blank"><img src="./img/Cookiecaster.jpg"></a></td>
+		 <td align="center"><h3>Tinkercad</h3>         <a href="https://tinkercad.com/" target="_blank"><img src="./img/tinkercad.png"></a></td>
          </tr>
 		 </table>
         
@@ -92,13 +92,13 @@ function fdprint(){
         <div>
          <table align="center">
 		 <tr>
-         <td align="center"><h3>5dprint</h3>          <a href="#" onClick="fdprint()"><img src="./img/makible.png" /></a></td>
-		 <td align="center"><h3>Slice</h3>		  <img src="./img/slice.png"/></td>
-		 <td align="center"><h3>Shapextractor</h3>		  <img src="./img/scan.png"/></td>
-         <td align="center"><h3>Webcam</h3>          <img src="./img/webcam.png"/></td>
+         <td align="center"><h3>5dprint</h3>           <a href="#" onClick="fdprint()"><img src="./img/makible.png" /></a></td>
+		 <td align="center"><h3>Slice</h3>		       <img src="./img/slice.png"/></td>
+		 <td align="center"><h3>Shapextractor</h3>     <img src="./img/scan.png"/></td>
+         <td align="center"><h3>Webcam</h3>            <img src="./img/webcam.png"/></td>
          </tr>
 		 <tr>
-         <td align="center"><h3>Octoprint</h3>          <img src="./img/octoprint.png"/></td>
+         <td align="center"><h3>Octoprint</h3>         <img src="./img/octoprint.png"/></td>
          <td align="center"><h3>owncloud</h3>          <img src="./img/owncloud.png"/></td>
          </tr>
 		 </table>
@@ -106,8 +106,8 @@ function fdprint(){
         <div>
          <table align="center">
 		 <tr>
-         <td align="center"><h3>Upgrade</h3>              <img src="./img/down.png" /></td>
-		 <td align="center"><h3>Configuration</h3>		  <img src="./img/conf.png"/></td>
+         <td align="center"><h3>Upgrade</h3>            <img src="./img/down.png" /></td>
+		 <td align="center"><h3>Configuration</h3>		<img src="./img/conf.png"/></td>
          </tr>
 		 </table>
 	    </div>
